--- a/5htmlform.html
+++ b/5htmlform.html
@@ -13,6 +13,9 @@
         <input type="text" placeholder="maxlength" maxlength="8">   <!--最大能输入的字符长度-->
         <input type="text" value="约定" size="50">    <!--拓宽单行文本框-->
         <input type="password" placeholder="密码">
+
+<!--        rows调整高度    cols调整宽度-->
+        <textarea rows="40" cols="80">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</textarea>
     </form>
 </body>
 </html>
