--- a/10htmlimage.html
+++ b/10htmlimage.html
@@ -6,7 +6,9 @@
 </head>
 <body>
 <a href="2htmljichu.html" target="_blank">
-<img src="music.png" width="256" alt="网易云音乐">   <!-- alt:图片不存在时备用的效果-->
+<!--把图片放在a标签里-->
+<img border="10" src="music.png" width="256" alt="网易云音乐">   <!-- alt:图片不存在时备用的效果-->
+    <a id="tips">有用的提示部分</a>
 </a>
 </body>
 </html>
