--- a/css样式表/1cssprimary.html
+++ b/css样式表/1cssprimary.html
@@ -12,9 +12,16 @@
             color: #ff8732;
         }
     </style>-->
+    <style>
+        p{
+            font-size: 50px;
+            color: #75ff42;
+        }
+    </style>
 </head>
 <body>
 <a>小城大事</a>
-<a style="font-size: 40px;color: #ff2716 ">小城大事</a> <!--元素内嵌样式表-->
+<a style="text-align: center;font-size: 40px;color: #ff2716 ">小城大事</a> <!--元素内嵌样式表-->
+<p style="text-align: center">小城大事</p>
 </body>
 </html>
