--- a/4htmllist.html
+++ b/4htmllist.html
@@ -5,7 +5,7 @@
     <title>创建列表</title>
 </head>
 <body>
-<ul>    <!--无序列表-->
+<ul>    <!--无序列表 unordered list-->
     <li>还记得当天旅馆的门牌</li>
     <li>还留住笑著离开的神态</li>
     <li>当天整个城市 那样轻快</li>
@@ -13,7 +13,7 @@
 </ul>
 
 
-<ol>    <!--有序列表-->
+<ol>    <!--有序列表 ordered list-->
     <li>约定 作词：林夕</li>
 <ol type="I">
     <li>还记得当天吉他的和弦</li>
