--- a/4htmllist.html
+++ b/4htmllist.html
@@ -23,7 +23,18 @@
 </ol>
 </ol>
 
+<!--
+    定义列表
+-->
+<dl>
+    <dt>W3C标准</dt>
+    <dd>结构(HTML)、表现(CSS)、行为(JavaScript)</dd>
 
+    <dt>W3C标准</dt>
+    <dd>结构(HTML)</dd>
+    <dd>表现(CSS)</dd>
+    <dd>行为(JavaScript)</dd>
+</dl>
 
 <ol reversed>   <!--降序-->
     <li>a</li>
