--- a/css3/18_flex布局.html
+++ b/css3/18_flex布局.html
@@ -1,21 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>flex</title>
+    <meta charset="utf-8">
+    <title>菜鸟教程(runoob.com)</title>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
+        .flex-container {
+            display: -webkit-flex;  /*弹性盒子*/
+            display: flex;
+            width: 400px;
+            height: 250px;
+            background-color: lightgrey;
         }
-        html, body {
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
+
+        .flex-item {
+            background-color: cornflowerblue;
+            margin: 10px;
+        }
+
+        .item1 {
+            -webkit-flex: 2;
+            flex: 2;    /* flex 属性用于指定弹性子元素如何分配空间。 */
+        }
+
+        .item2 {
+            -webkit-flex: 1;
+            flex: 1;
+        }
+
+        .item3 {
+            -webkit-flex: 1;
+            flex: 1;
         }
     </style>
 </head>
 <body>
+
+<div class="flex-container">
+    <div class="flex-item item1">flex item 1</div>
+    <div class="flex-item item2">flex item 2</div>
+    <div class="flex-item item3">flex item 3</div>
+</div>
 
 </body>
 </html>
